feat: CSAS conformance backport to java-11 (evidence model, bounded traversal, deterministic output, downgraded records/pattern matching/switch)